--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "build": "webpack --mode production"
+    "build:webpack": "webpack --mode production",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -49,6 +50,7 @@
     "sass-loader": "^13.3.2",
     "storybook": "^7.4.2",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
