--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "woozdesign-react",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
