--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ storybook-static/
 .eslintcache
 
 # Lock files (if you decide not to track them)
-#*-lock.json
-#yarn.lock
+*-lock.json
+yarn.lock
 
 # End of .gitignore
