--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "woozdesign-ui",
+  "name": "@woozdesign/ui",
   "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "postinstall": "npm run build:webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
@@ -11,9 +12,10 @@
     "build": "tsc"
   },
   "keywords": [],
-  "author": "",
+  "author": "Leo Kim <kim.kw8012@gmail.com> (http://woozlabs.com/)",
   "license": "MIT",
   "dependencies": {
+    "@woozdesign/colors": "github:woozlabs/woozdesign-colors",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.67.0"
