--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "sass": "^1.67.0"
   },
   "files": [
-    "dist"
+    "dist",
+    "styles.css"
   ],
   "devDependencies": {
     "@babel/core": "^7.22.20",
