--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "build:webpack": "webpack --mode production",
+    "build:webpack": "webpack --config webpack.config.ts --mode production",
     "build": "tsc"
   },
   "keywords": [],
@@ -40,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "babel-loader": "^9.1.3",
+    "babel-plugin-module-resolver": "^5.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
