--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "build:webpack": "webpack --config webpack.config.ts --mode production",
-    "build": "tsc"
+    "build": "tsc --build && tsc-alias && webpack --config webpack.config.ts --mode production"
   },
   "keywords": [],
   "author": "Leo Kim <kim.kw8012@gmail.com> (http://woozlabs.com/)",
@@ -57,6 +57,7 @@
     "storybook": "^7.4.5",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
+    "tsc-alias": "^1.8.8",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
