--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "lib": ["dom", "es6"],
-    "declaration": true,
     "strict": true,
+    "declaration": true,
     "rootDir": "./src",
     "baseUrl": ".",
     "paths": {
@@ -17,5 +17,5 @@
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "types/styles.d.ts"],
-  "exclude": ["node_modules", ".storybook", "**/*.stories.tsx", "**/*.spec.ts", "src/stories"]
+  "exclude": ["node_modules", ".storybook", "**/*.stories.tsx", "**/*.spec.ts", "src/stories", "dist"]
 }
