--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@woozdesign/ui",
   "version": "0.0.17",
-  "description": "",
+  "description": "An open-source UI component library for building high-quality, accessible design systems.",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,11 +11,14 @@
     "build:tsc": "tsc --build && tsc-alias && webpack --config webpack.config.ts --mode production",
     "build": "build:webpack"
   },
-  "keywords": [],
+  "keywords": [
+    "woozdesign",
+    "ui"
+  ],
   "author": "Leo Kim <kim.kw8012@gmail.com> (http://woozlabs.com/)",
   "license": "MIT",
   "dependencies": {
-    "@woozdesign/colors": "^1.0.1",
+    "@woozdesign/colors": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.67.0"
@@ -24,6 +27,10 @@
     "dist",
     "styles.css"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/woozlabs/woozdesign-ui.git"
+  },
   "devDependencies": {
     "@babel/core": "^7.22.20",
     "@babel/preset-env": "^7.22.20",
