--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,9 @@ jobs:
           registry-url: 'https://registry.npmjs.org/'
           scope: '@woozlabs'
 
+      - name: Build 🔧
+        run: npm run build:webpack
+
       - name: Install dependencies 🔧
         run: npm ci
 
