--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "^6.7.0",
     "babel-loader": "^9.1.3",
     "babel-plugin-module-resolver": "^5.0.0",
+    "classnames": "^2.3.2",
     "css-loader": "^6.8.1",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
