--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "./dist",
     "module": "esnext",
-    "target": "es5", // Modified for broader browser support
+    "target": "es2015",
     "moduleResolution": "node",
     "jsx": "react",
     "esModuleInterop": true,
