--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/react-webpack5": "^7.4.6",
     "@storybook/testing-library": "^0.2.2",
     "@types/node-sass": "^4.11.4",
+    "@types/react-dom": "^18.2.13",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "babel-loader": "^9.1.3",
