--- a/package.json
+++ b/package.json
@@ -19,10 +19,23 @@
   "license": "MIT",
   "dependencies": {
     "@woozdesign/colors": "^1.0.31",
-    "@woozdesign/icons": "^1.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.67.0"
+    "@woozdesign/icons": "^1.0.2"
+  },
+  "peerDependencies": {
+    "@types/react": "*",
+    "@types/react-dom": "*",
+    "react": "^16.8 || ^17.0 || ^18.0",
+    "react-dom": "^16.8 || ^17.0 || ^18.0",
+    "sass": "^1.67.0",
+    "classnames": "^2.3.2"
+  },
+  "peerDependenciesMeta": {
+    "@types/react": {
+      "optional": true
+    },
+    "@types/react-dom": {
+      "optional": true
+    }
   },
   "files": [
     "dist",
@@ -51,7 +64,6 @@
     "@typescript-eslint/parser": "^6.7.0",
     "babel-loader": "^9.1.3",
     "babel-plugin-module-resolver": "^5.0.0",
-    "classnames": "^2.3.2",
     "css-loader": "^6.8.1",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
