--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@woozdesign/ui",
   "version": "0.9.18",
-  "description": "An open-source UI component library for building high-quality, accessible design systems.",
+  "description": "An open-source design library for building a simple, useful, and impactful design system.",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
