--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@woozdesign/ui",
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.0",
   "description": "An open-source design library for building a simple, useful, and impactful design system.",
   "main": "dist/index.js",
   "scripts": {
